@@ -1,5 +1,5 @@
 package gregtech;
 
 public class BuildInfo {
-   public static String version = "6.12.2-modified";
+   public static String version = "6.13.07";
 }
