@@ -1,0 +1,13 @@
+{
+  "animation": {
+    "frametime": 1,
+    "frames": [
+      5,
+      4,
+      3,
+      2,
+      1,
+      0
+    ]
+  }
+}
