@@ -30,6 +30,7 @@ To compensate the early-game loss of Chromium, small amount of Chromium can now 
 [ADDED]Laser Cutters (T1-T5)
 [ADDED]Polytetrafluoroethylene drum and pipes and its production.
 [ADDED]Polyvinylchloride drum and pipes and its production.
+[ADDED]Large Heat Mixer. A multiblock version of heat mixer working at 256x parallel recipes.
 
 6.13.06:
 [CHANGED]You can no longer Put dust into Extruder
